--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,25 +1,17 @@
-img {
-    display: block;
-    margin: 0px;
-    padding: 0px;
-}
-
 .is-hidden {
     position: absolute;
-    visibility: hidden;
-    text-decoration: none;
-}
-
-
-.rewievs-slider {
+    opacity: 0;
+  }
+  
+  .conteiner {
     min-width: 320px;
+    max-width: 1258px;
     padding: 50px 20px;
-    color: $main-text;
+    margin: 0px auto;
     text-align: center;
-}
-
-.rewievs-title {
-    margin-bottom: 20px;
+  }
+  
+  .rewievs-title {
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -27,32 +19,29 @@ img {
     line-height: 26px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: $main-text
-}
-
-.rewievs-list {
+    color: #111518;
+  }
+  
+  .rewievs-list {
     padding: 20px;
     margin: 20px 0px;
-    background: #FFFFFF;
+    background-color: #fff;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-}
-
-.rewievs-img-wrapper {
-    padding-left: 100px;
-}
-
-.rewievs-social-wrapper .slider-img {
-    display: block;
-    margin: 0;
-    padding: 0;
-}
-
-.slider-social-icon {
+  }
+  
+  .slider-social-icon {
     display: block;
     margin: 20px auto;
-}
-
-.rewievs-author {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .slider-img {
+    display: block;
+    margin: 0px auto;
+  }
+  
+  .rewiev-author-name {
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -60,10 +49,10 @@ img {
     line-height: 17px;
     text-align: center;
     letter-spacing: 0.08em;
-    color: #FF6B09;
-}
-
-.rewievs-author-colege {
+    color: #ff6b09;
+  }
+  
+  .rewiev-author-colege {
     padding: 10px 0px;
     font-family: Montserrat;
     font-style: normal;
@@ -72,61 +61,136 @@ img {
     line-height: 15px;
     text-align: center;
     letter-spacing: 0.08em;
-
-    color: #B9B9B9;
-}
-
-.rewievs-text {
+    color: #b9b9b9;
+  }
+  
+  .rewiev-text-content {
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 12px;
     line-height: 20px;
     text-align: center;
-
-    color: #3D3D3D;
-}
-
-.rewievs-text-read-more {
+    color: #3d3d3d;
+  }
+  
+  .rewiev-text-read-more {
     display: block;
-    margin: 0 auto;
+    margin: 0px auto;
     border: none;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 20px;
     text-decoration-line: underline;
-    color: $acent-text;
-}
-
-<<<<<<< HEAD
-.slider-icon-wrapper {
-=======
-
-
-.sider-icon-wrapper {
->>>>>>> 03389819b476e18dd0ce8efdfeff38855d6d07f5
+    color: #ff6b09;
+    background-color: transparent;
+  }
+  
+  .rewiev-text-read-more:hover,
+  .rewiev-text-read-more:focus {
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: 700;
+  }
+  
+  .slider-icon-wrapper {
     display: flex;
-}
-
-.slider-list-icon {
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .slider-list-icon {
     display: flex;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
     width: 183px;
-}
-
-.slider-list-icon-item:not(:last-child) {
+    margin: 0px auto;
+  }
+  
+  .slider-list-icon-item:not(:last-child) {
     margin-right: 10px;
-}
-
-.slider-list-icon-item img {
-    border-radius: 50%;
+  }
+  
+  .slider-list-icon-item img {
     display: block;
-}
-
-.slider-slick {
+    border-radius: 50%;
+    border: 2px solid;
+    border-color: transparent;
+  }
+  
+  .slider-list-icon-item img:hover,
+  .slider-list-icon-item img:focus {
+    border-color: #ff6b09;
+    background-color: #ff6b09;
+    cursor: pointer;
+  }
+  
+  .slider-slick-button {
     display: block;
     margin: 0;
     padding: 0;
     border-style: none;
     border: none;
     background-color: transparent;
-}
+  }
+  
+  .slider-slick-button:hover {
+    cursor: pointer;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .conteiner {
+      position: relative;
+      min-width: 768px;
+      padding-top: 0px;
+    }
+  
+    .rewievs-list {
+      margin: 30px;
+      padding: 0;
+    }
+  
+    .slider-button {
+      position: absolute;
+    }
+  
+    .prev {
+      left: 27px;
+      top: 50%;
+    }
+  
+    .next {
+      right: 27px;
+      top: 50%;
+    }
+  
+    .rewievs-list-item {
+      display: flex;
+      padding: 40px;
+    }
+  
+    .rewiev {
+      margin-left: 46px;
+    }
+  
+    .rewiev-author-name,
+    .rewiev-author-colege,
+    .rewiev-text-content {
+      text-align: start;
+    }
+  
+    .rewiev-text-read-more {
+      display: inline;
+    }
+  
+    .slider-icon-box {
+      margin: 0 auto;
+    }
+    .slider-list-icon {
+      width: 560px;
+    }
+  }
+  
